--- a/homework_3/nb/HW3.ipynb
+++ b/homework_3/nb/HW3.ipynb
@@ -1178,7 +1178,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Min C with best accuracy --> 0.1"
+   ]
   }
  ],
  "metadata": {
